syntax = "proto3";

package proto;

// Combined ClientApi
service Api {
    rpc SetAttr(SetAttrRequest) returns (SetAttrResponse) {}
    rpc GetAttr(GetAttrRequest) returns (GetAttrResponse) {}
    rpc Read(ReadRequest) returns (ReadResponse) {}
    rpc Write(WriteRequest) returns (WriteResponse) {}
    rpc MkDir(MkDirRequest) returns (MkDirResponse) {}
    rpc Create(CreateRequest) returns (CreateResponse) {}
    rpc Remove(RemoveRequest) returns (RemoveResponse) {}
    rpc Lookup(LookupRequest) returns (LookupResponse) {}
    rpc ReadDirAll(ReadDirAllRequest) returns (ReadDirAllResponse) {}
    rpc Symlink(SymlinkRequest) returns (SymlinkResponse) {}
    rpc Readlink(ReadlinkRequest) returns (ReadlinkResponse) {}
    rpc Getxattr(GetxattrRequest) returns (GetxattrResponse) {}
    rpc Setxattr(SetxattrRequest) returns (SetxattrResponse) {}
    rpc Listxattr(ListxattrRequest) returns (ListxattrResponse) {}
    rpc Removexattr(RemovexattrRequest) returns (RemovexattrResponse) {}
    rpc Rename(RenameRequest) returns (RenameResponse) {}
    rpc Statfs(StatfsRequest) returns (StatfsResponse) {}
}

// DirEnt is a directory entry
message DirEnt {
    string name   = 1;
    uint64 parent = 2;
    Attr   attr   = 3;
}

// DirEntries just contains a list of directory entries
message DirEntries {
    repeated DirEnt DirEntries  = 1;
    repeated DirEnt FileEntries = 2;
}

// Attr
message Attr {
    uint64 inode  = 1;
    int64  atime  = 2;
    int64  mtime  = 3;
    int64  ctime  = 4;
    int64  crtime = 5;
    uint32 mode   = 6;
    int32  valid  = 7;
    uint64 size   = 8;
    uint32 uid    = 9;
    uint32 gid    = 10;
}

// SetAttrRequest
message SetAttrRequest {
    Attr   attr  = 1;
    uint32 valid = 2;   // Bitmask of which attrs are changed
}

// SetAttrResponse
message SetAttrResponse {
    Attr attr = 1;
}

// GetAttrRequest
message GetAttrRequest {
    uint64 inode = 1;
}

// GetAttrResponse
message GetAttrResponse {
    Attr attr = 1;
}

// ReqadRequest
message ReadRequest {
    uint64 inode   = 1;
    int64  offset  = 2;
    int64  size    = 3;
}

// ReadResponse
message ReadResponse {
    uint64 inode   = 1;
    bytes  payload = 2;
}

// WriteRequest
message WriteRequest {
    uint64 inode   = 1;
    int64  offset  = 2;
    bytes  payload = 3;
}

// WriteResponse place holder. Maybe use an enum so
// we can map to fuse errors ?
message WriteResponse {
    int32 status = 1;
}

// MkdirRequest
message MkDirRequest {
    uint64 parent = 1;
    string name   = 2;
    Attr   attr   = 3;
}

// MkdirResponse
message MkDirResponse {
    string name   = 1;
    Attr   attr   = 2;
}

// CreateRequest
message CreateRequest {
    uint64 parent = 1;
    string name   = 2;
    Attr   attr   = 3;
}

// CreateResponse
message CreateResponse {
    string name   = 1;
    Attr   attr   = 2;
}

// RemoveRequest
message RemoveRequest {
    uint64 parent = 1;
    string name   = 2;
}

// RemoveResponse
message RemoveResponse {
    int32 status = 1;
}

// LookupRequest
message LookupRequest {
    uint64 parent = 1; 
    string name   = 2;
}


// LookupResponse is a directory entry
message LookupResponse {
    string name   = 1;
    Attr   attr   = 2;
}

// ReadDirAllRequest
message ReadDirAllRequest {
    uint64 inode = 1;
}

// ReadDirAllResponse
message ReadDirAllResponse {
    repeated DirEnt DirEntries  = 1;
    repeated DirEnt FileEntries = 2;
}

// SymlinkRequest
message SymlinkRequest {
    uint64 parent   = 1;
    string name     = 2;
    string target   = 3;
    uint32 uid      = 4;
    uint32 gid      = 5;
}

// SymlinkResponse
message SymlinkResponse {
    uint64 parent = 1;
    string name   = 2;
    Attr   attr   = 3;
}

// ReadlinkRequest
message ReadlinkRequest {
    uint64 inode = 1;
}

// ReadlinkResponse
message ReadlinkResponse {
    string target = 1;
}

// Getxattr
message GetxattrRequest {
    uint64 inode = 1;
    string name = 2;
    uint32  size = 3;
    uint32  position = 4;
}
message GetxattrResponse {
    bytes xattr = 1;
}

// Setxattr
message SetxattrRequest {
    uint64 inode = 1;
    string name = 2;
    bytes xattr = 3;
    uint32 position = 4;
    uint32 flags = 5;
}
message SetxattrResponse {}

// Listxattr
message ListxattrRequest {
    uint64 inode = 1;
    uint32  size = 2;
    uint32  position = 3;
}
message ListxattrResponse {
    bytes xattr = 1;
}

// Removexattr
message RemovexattrRequest {
    uint64 inode = 1;
    string name = 2;
}
message RemovexattrResponse {}

// Rename
message RenameRequest {
    uint64 parent  = 1;
    uint64 newDir  = 2;
    string oldName = 3;
    string newName = 4;
}
message RenameResponse {}

// Statfs
message StatfsRequest {}
message StatfsResponse {
    uint64 blocks  = 1;
    uint64 bfree   = 2;
    uint64 bavail  = 3;
    uint64 files   = 4;
    uint64 ffree   = 5;
    uint32 bsize   = 6;
    uint32 namelen = 7;
    uint32 frsize  = 8;
}
