syntax = "proto3";
package valueproto;

//import "github.com/gogo/protobuf/gogoproto/gogo.proto";

//option (gogoproto.marshaler_all) = true;
//option (gogoproto.sizer_all) = true;
//option (gogoproto.unmarshaler_all) = true;
//option (gogoproto.goproto_getters_all) = false;

service ValueStore {
    rpc Write(WriteRequest) returns (WriteResponse) {}
    rpc StreamWrite(stream WriteRequest) returns (stream WriteResponse) {}
    rpc Lookup(LookupRequest) returns (LookupResponse) {}
    rpc StreamLookup(stream LookupRequest) returns (stream LookupResponse) {}
    rpc Read(ReadRequest) returns (ReadResponse) {}
    rpc StreamRead(stream ReadRequest) returns (stream ReadResponse) {}
    rpc Delete(DeleteRequest) returns (DeleteResponse) {}
    rpc StreamDelete(stream DeleteRequest) returns (stream DeleteResponse) {}
}

message EmptyMsg {}

message WriteRequest {
    uint32 rpcid = 1;
    uint64 keyA = 2;
    uint64 keyB = 3;
    bytes  value = 4;
    int64  timestampMicro = 5;
}

message LookupRequest {
    uint32 rpcid = 1;
    uint64 keyA = 2;
    uint64 keyB = 3;
}

message ReadRequest {
    uint32 rpcid = 1;
    uint64 keyA = 2;
    uint64 keyB = 3;
}

message DeleteRequest {
    uint32 rpcid = 1;
    uint64 keyA = 2;
    uint64 keyB = 3;
    int64  timestampMicro = 4;
}

message WriteResponse {
    uint32 rpcid = 1;
    int64  timestampMicro = 2;
    string err = 3;
}

message LookupResponse {
    uint32 rpcid = 1;
    int64  timestampMicro = 2;
    uint32 length = 3;
    string err = 4;
}

message ReadResponse {
    uint32 rpcid = 1;
    int64  timestampMicro = 2;
    bytes  value = 3;
    string err = 4;
}

message DeleteResponse {
    uint32 rpcid = 1;
    int64  timestampMicro = 2;
    string err = 3;
}
